2008-09-09  Richard Guenther  <rguenther@suse.de>

	* decl.c (build_result_decl): Remove no longer applicable
	promotion.

2008-09-05  David Daney  <ddaney@avtrex.com>

	* gcj.texi (-freduced-reflection): Clarify option's restrictions.

2008-08-21  David Daney  <ddaney@avtrex.com>

	* class.c (make_class_data): Don't add field_index when
	flag_reduced_reflection set.

2008-08-12  Ulrich Weigand  <uweigand@de.ibm.com>

	* typeck.c (convert): Do not check for TARGET_FLOAT_FORMAT.

2008-08-08  Manuel Lopez-Ibanez  <manu@gcc.gnu.org>

	PR 28875
	* lang.c (java_handle_option): Replace set_Wunused with
	warn_unused.

2008-07-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* gcj.texi: Update copyright years.  Do not list GPL as
	Invariant Section.

2008-07-29  Jakub Jelinek  <jakub@redhat.com>

	* class.c (build_utf8_ref): Set DECL_SIZE and DECL_SIZE_UNIT
	from ctype's sizes.

	* class.c (build_utf8_ref): Pad initializer string to utf8const_type's
	alignment.

2008-07-29  Jan Hubicka  <jh@suse.cz>

	* lang.c (java_post_options): Remove handling of flag_no_inline.

2008-07-28  Richard Guenther  <rguenther@suse.de>

	Merge from gimple-tuples-branch.

	2008-07-18  Richard Guenther  <rguenther@suse.de>

	* expr.c: Include tree-iterator.h.
	* Make-lang.in (expr.o): Add tree-iterator.h dependency.

	2008-07-18  Aldy Hernandez  <aldyh@redhat.com>

	* java-gimplify.c: Include gimple.h instead of tree-gimple.h.
	* expr.c: Same.

	2008-07-14  Aldy Hernandez  <aldyh@redhat.com>

	* java-gimplify.c (java_gimplify_expr): Same.
	(java_gimplify_modify_expr): Same.
	* java-tree.h: Rename GENERIC_NEXT to TREE_CHAIN.

	2008-05-02  Diego Novillo  <dnovillo@google.com>

	* expr.c (build_java_throw_out_of_bounds_exception): Fix
	mixed declarations and code.

	2008-05-02  Doug Kwan  <dougkwan@google.com>
	
	* expr.c (build_java_throw_out_of_bounds_exception ): Wrap call to
	_Jv_ThrowBadArrayIndex with a COMPOUND_EXPR to return 0.

	2008-02-19  Diego Novillo  <dnovillo@google.com>
